sass/pages/_index.scss
.main {
    background-color: #fff;
    margin-top: 50px;
}

.nav-menu {
    @include centering;
    width: 100%;  
    flex-direction: row;
    max-width: 1280px;
    &__part1 {
        display: flex;
        flex-direction: row;
        list-style-type: none;
        justify-content: flex-start;
        width: 50%;
        padding-left: 0px;
        font-size: 12px;
        font-weight: bolder;
        @include tablette {
            height: 60px;
        }
        @include desktop {
            padding-left: 0px;
            height: unset;
        }
    }
    &__part1 li {
        margin: 5px;
        border: 0.1em solid $blackcolor;
        border-radius: 10px;
        padding: 13px 15px;
        box-shadow: 3px 3px 3px #736e6e;
        background-color: $primarycolor;
        &:hover {
            color: $backgroundGrey;
            background-color: $secondarycolor;
        }
    }
    &__part1 a {
        color: #fff;
    }
    &__part2 {
        display: flex;
        flex-direction: row;
        list-style-type: none;
        justify-content: flex-end;
        width: 50%;
        font-size: 12px;
        font-weight: bolder;
        @include tablette {
            height: 60px;
        }
        @include desktop {
            padding-left: 0px;
            height: unset;
        }
    }
    &__part2 li {
        margin: 5px;
        border: 0.1em solid $blackcolor;
        border-radius: 10px;
        padding: 13px 15px;
        box-shadow: 3px 3px 3px #736e6e;
        background-color: $primarycolor;
        &:hover {
            color: $backgroundGrey;
            background-color: $secondarycolor;
        }
    }
    &__part2 a {
        color: #fff;
    }
}

.nav-menu__part2 li:nth-child(1) {
    padding: 5px 15px;
    @include tablette {
        padding: 13px 15px 5px 15px;
    }
    @include desktop {
        padding: 13px 15px 5px 15px;
    }
}

.quickview {
    @include centering;
    flex-direction: row;
    justify-content: space-between;
    max-width: 1280px;
    margin: auto;
}

.quickview-token {
    @include centering;
    flex-direction: column;
    width: 25%;
    font-size: 16px;
    color: $whitecolor;
    border: 0.1em solid $blackcolor;
    border-radius: 10px;
    box-shadow: 3px 3px 3px #736e6e;
    background-color: $primarycolor;
    margin-left: 5px;
    margin-right: 5px;
    &__heading{
        margin-left: 5px;
        font-size: 16px;
        font-weight: bold;
        @include desktop {
            font-size: 18px;
        }
    }
    &__amount{
        display: flex;
        align-items: center;
        flex-direction: row;
        justify-content: space-around;
    }
    &__icon {
        margin-right: 3px;
        bottom: 1px;
        position: relative;
    }
    &:hover {
        color: $backgroundGrey;
        background-color: $secondarycolor; 
    }
}

.qta {
    justify-content: center;
}

.qtn {
    margin-right: 5px;
}

.buy {
    background-color: #fff;
}

.buy-heading {
    font-size: 18px;
    font-weight: normal;
    margin: 50px auto 0px auto;
    max-width: 1280px;
}

.buy-tokens {
    @include centering;
    flex-direction: row;
    justify-content: space-around;  
    width: 100%; 
}

.token4sale {
    @include centering;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 100%;  
    max-width: 1280px;
    padding-left: 0px;
    padding-right: 0px;
    margin-top: 5px;
    list-style-type: none;
    & li {
        width: 40%;
        margin: 15px;
        @include tablette {
            width: 23%;
        }
    }
}

.token4sale-box {
    @include centering;
    flex-direction: column;
    color: $whitecolor;
    border: 0.1em solid $blackcolor;
    border-radius: 10px;
    box-shadow: 3px 3px 3px #736e6e;
    background-color: $primarycolor;
    height: 200px;
    margin-left: 5px;
    margin-right: 5px;
    &__text {
        font-size: 20px;
        font-weight: bold;
    }
    &:hover {
        color: $backgroundGrey;
        background-color: $secondarycolor; 
    }  
}

.list {
    background-color: $primarycolor;
    @include centering;
    flex-direction: column;
    width: 100%;
    max-width: 1280px;
    margin: 50px auto 50px auto;
    border: 0.1em solid $blackcolor;
    border-radius: 40px 40px 10px 10px;
    box-shadow: 3px 3px 3px #736e6e;
    padding-left: 5px;
    padding-right: 5px;
}

.list-token.lth {
    border-radius: 40px 40px 10px 10px;
}

.list-token {
    @include centering;
    flex-direction: row;
    justify-content: space-around;
    width: 100%;
    max-width: 1280px;
    color: $whitecolor;
    border: 0.1em solid $blackcolor;
    border-radius: 10px;
    box-shadow: 2px 2px 0 #353535;
    background-color: $primarycolor;
    &:hover {
        color: $backgroundGrey;
        background-color: $secondarycolor; 
    } 
    &__amount {
        @include centering;
        flex-direction: row;
    }
    &__variation {
        @include centering;
        flex-direction: row;
    }
    &__value {
        @include centering;
        flex-direction: row;
    }
    &__heading {
        font-size: 16px;
        font-weight: bolder;
    }
    &__number {
        font-size: 16px;
        font-weight: bolder;
    }
    &__icon {
        margin-left: 5px;
        margin-right: 5px;
    }
}

